--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,4 @@
-body {
-  color: red;
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800&display=swap');
+@import 'partials/_variables.scss';
+@import 'partials/_common.scss';
+@import 'partials/_mixins.scss';
