--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,3 +1,6 @@
 $fontFamily: 'Montserrat', sans-serif;
-$width80: 80%;
 $marginAuto: 0 auto;
+$width100: 100%;
+$width80: 80%;
+$heightCenter: 400px;
+$primaryColor: #f7ead7;
