--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -1,14 +1,41 @@
 header {
-  @include centerPage;
-  height: 800px;
+  @include centerPage100;
   background-color: coral;
   .nav {
+    @include fixed;
     width: 100%;
-    height: 150px;
-    background-color: lightyellow;
+    height: 100px;
+    background-color: #FFF;
+    .wrapper {
+      @include centerPage;
+      @include flexRowBetween;
+      .left {
+        img {
+          width: 150px;
+        }
+      }
+      .rigth {
+        @include flexRow
+        ul {
+          list-style: none;
+          li {
+            display: inline-block;
+            a {
+              @include aLinks;
+            }
+          }
+        }
+        .button {
+          width: 50px;
+          height: 30px;
+          background-color: red;
+          border: 1px solid #324691;
+        }
+      }
+    }
   }
   .jumbo {
-    width: 100%;
+    @include centerPage;
     height: calc(800px - 150px);
     background-color: lightgreen;
     &::after{
