--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,7 +1,18 @@
+/* FONT */
 $fontFamily: 'Montserrat', sans-serif;
 $fonSize: 14px;
+
+/* MARGIN */
 $marginAuto: 0 auto;
+
+/* WIDTH */
 $width100: 100%;
 $width80: 80%;
+
 $heightCenter: 400px;
+
+/* COLOR */
 $primaryColor: #f7ead7;
+$colorBtn: #324691;
+$colorFont: #5c4632;
+$colorWhite: #fff;
