--- a/src/style/partials/_common.scss
+++ b/src/style/partials/_common.scss
@@ -6,4 +6,9 @@
 body {
   font-family: $fontFamily;
   font-size: $fonSize;
+  color: $colorFont;
+}
+.bars-menu {
+  display: none;
+  font-size: 2em;
 }
