--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -4,8 +4,9 @@ header {
   .nav {
     @include fixed;
     width: 100%;
-    height: 100px;
+    height: 90px;
     background-color: #FFF;
+    border-bottom: 1px solid $colorFont;
     .wrapper {
       @include centerPage;
       @include flexRowBetween;
@@ -15,21 +16,33 @@ header {
         }
       }
       .rigth {
-        @include flexRow
+        @include flexRow;
         ul {
           list-style: none;
           li {
             display: inline-block;
             a {
               @include aLinks;
+              i {
+                margin-bottom: 5px;
+                font-size: 1.2em;
+              }
             }
           }
         }
-        .button {
-          width: 50px;
-          height: 30px;
-          background-color: red;
-          border: 1px solid #324691;
+        button {
+          margin-left: 20px;
+          @include btnSmall;
+          svg {
+            margin-right: 5px;
+          }
+          &:hover {
+            color: $colorWhite;
+            background-color: $colorBtn;
+            .color_path {
+              display: none;
+            }
+          }
         }
       }
     }
