--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,6 +1,6 @@
 /* FONT */
 $fontFamily: 'Montserrat', sans-serif;
-$fonSize: 14px;
+$fonSize: 16px;
 
 /* MARGIN */
 $marginAuto: 0 auto;
@@ -8,6 +8,10 @@ $marginAuto: 0 auto;
 /* WIDTH */
 $width100: 100%;
 $width80: 80%;
+
+/* FLOAT */
+$floatLeft: left;
+
 
 $heightCenter: 400px;
 
