--- a/src/style/partials/_header.scss
+++ b/src/style/partials/_header.scss
@@ -1,6 +1,6 @@
 header {
   @include centerPage100;
-  background-color: coral;
+  background-color: $colorWhite;
   .nav {
     @include fixed;
     width: 100%;
@@ -17,30 +17,32 @@ header {
       }
       .rigth {
         @include flexRow;
+        font-size: .9em;
         ul {
           list-style: none;
           li {
             display: inline-block;
             a {
               @include aLinks;
+              margin-left: 20px;
               i {
                 margin-bottom: 5px;
                 font-size: 1.2em;
               }
             }
           }
-        }
-        button {
-          margin-left: 20px;
-          @include btnSmall;
-          svg {
-            margin-right: 5px;
-          }
-          &:hover {
-            color: $colorWhite;
-            background-color: $colorBtn;
-            .color_path {
-              display: none;
+          button {
+            margin-left: 20px;
+            @include btnSmall;
+            svg {
+              margin-right: 5px;
+            }
+            &:hover {
+              color: $colorWhite;
+              background-color: $colorBtn;
+              .color_path {
+                display: none;
+              }
             }
           }
         }
@@ -49,10 +51,41 @@ header {
   }
   .jumbo {
     @include centerPage;
-    height: calc(800px - 150px);
-    background-color: lightgreen;
+    margin-top: 90px;
+    padding: 100px 0;
     &::after{
       @include clearfix;
+    }
+    .left {
+      padding: 40px 0;
+
+      p {
+        padding: 30px 0;
+        font-size: 1.2em;
+      }
+      .btn-jumbo {
+        padding-bottom: 30px;
+        .btn-big {
+          @include btnBig;
+          svg {
+            margin-right: 7px;
+          }
+        }
+        span {
+          padding: 0 8px;
+          font-size: .85em;
+          color: silver
+        }
+      }
+      a {
+        @include aLinks;
+        font-size: .85em;
+      }
+    }
+    .rigth {
+      img{
+        width: 100%;
+      }
     }
   }
 }
