--- a/src/style/partials/_media-query.scss
+++ b/src/style/partials/_media-query.scss
@@ -1,8 +1,16 @@
+/* NAV */
 @media screen and  (max-width: 767px) {
   .bars-menu {
     display: block;
   }
   .list-menu {
     display: none;
+  }
+}
+
+/* JUMBO */
+@media screen and (max-width: 1140px) {
+  .left {
+    width: 100%;
   }
 }
