--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -3,6 +3,11 @@
   display: flex;
   align-items: center;
 }
+@mixin flexRowCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @mixin flexRowEnd {
   display: flex;
   justify-content: flex-end;
